Última versión de la aplicación web de hotel.

--- a/public/login.html
+++ b/public/login.html
@@ -26,7 +26,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                                <input type="password" class="form-control" id="contrasenaLogin" aria-describedby="exampleInputPassword1" required>
+                                <input type="text" class="form-control" id="contrasenaLogin" aria-describedby="exampleInputPassword1" required>
                                 <div id="exampleInputPassword1"  class="invalid-feedback">
                                     Introduzca una contraseña.
                                 </div>
